--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Test</h1>
+    <h1>Tune in Saida's Weather Channel</h1>
+    <form method="POST" action="/weather-forecast">
+        <label>Choose your Country
+            <input name="country" type="text">
+        </label>
+        <label>Your Zipcode
+            <input name="zipcode" type="text">
+        </label>
+        <button id="next-btn" type="submit">Next</button>
+    </form>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
+
+    <script src="index.js"></script>
+
 </body>
 
 </html>
