added weather forcast coordinates to new-page.ejs

--- a/views/new-page.ejs
+++ b/views/new-page.ejs
@@ -9,7 +9,41 @@
 </head>
 
 <body>
-    <h1>New Page</h1>
+    <h1>
+        Today is
+        <%= date %>
+    </h1>
+    <h1>
+        <%= country %>
+            <%= city %>
+    </h1>
+    <h2>
+        Current temp
+        <%= currentTemp %>&#8457
+
+    </h2>
+
+    <h2>
+        Min temp
+        <%= tempMin %>&#8457
+    </h2>
+    <h2>
+        Max temp
+        <%= tempMax %>&#8457
+    </h2>
+
+    <h2>
+        Humidity
+        <%= humidity %>
+    </h2>
+    <h2>
+        Wind speed
+        <%= wind %>
+    </h2>
+    <h2>
+        clouds:
+        <%= clouds %>
+    </h2>
 </body>
 
 </html>
