--- a/public/style.css
+++ b/public/style.css
@@ -129,3 +129,16 @@ table {
 }
 
 /* ------------------------ */
+
+.forecast-img {
+    background-image: url("images/Planeta-Terra.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100vh;
+}
+.transparent-box {
+    background-color: rgba(255, 255, 255, 0.4);
+    width: 60%;
+    height: 60%;
+}
