--- a/public/style.css
+++ b/public/style.css
@@ -130,15 +130,51 @@ table {
 
 /* ------------------------ */
 
+.home-page-img {
+    background-image: url("images/1-795x385.jpg");
+    width: 100vw;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .forecast-img {
     background-image: url("images/Planeta-Terra.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .transparent-box {
     background-color: rgba(255, 255, 255, 0.4);
     width: 60%;
     height: 60%;
+}
+
+h1,
+h2 {
+    padding: 10px;
+    font-size: 20px;
+    text-align: center;
+    background-color: rgba(0, 255, 0, 0.5);
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-family: "Bowlby One SC", cursive;
+}
+
+.min-max-box {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#home-btn {
+    display: block;
+}
+
+.form-submit {
+    background-color: white;
+    font-size: 18px;
 }
