added style to index.ejs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,14 +11,14 @@
 
 <body>
 
-    <h1>Tune in Saida's Weather Channel</h1>
+    <h1 class="home-page-header">Tune in Saida's Weather Channel</h1>
     <div class="home-page-img">
         <form class="form-submit" method="POST" action="/weather-forecast">
             <label>Choose your Country
-                <input name="country" type="text">
+                <input class="input-box" name="country" type="text">
             </label>
-            <label>Your Zipcode
-                <input name="zipcode" type="text">
+            <label>Zipcode
+                <input class="input-box" name="zipcode" type="text">
             </label>
             <button id="next-btn" type="submit">Next</button>
         </form>
