--- a/public/style.css
+++ b/public/style.css
@@ -178,3 +178,11 @@ h2 {
     background-color: white;
     font-size: 18px;
 }
+
+.input-box {
+    border: 2px solid rgba(255, 140, 0, 0.3);
+}
+
+.home-page-header {
+    box-shadow: 1px 2px 5px black;
+}
